--- a/index.html
+++ b/index.html
@@ -586,11 +586,12 @@
         let searchForDishes = false; // eller true, beroende på din standardinställning
         let primaryIngredients = {};
         let nonPrimarySynonyms = {};
+        let groupedIngredients = {};
+
 
 
 
         async function loadData() {
-
             try {
                 // Ladda den huvudsakliga datan som innan
                 const dataResponse = await fetch(dataUrl);
@@ -599,7 +600,7 @@
                 console.log('Main data loaded:', allData);
 
                 // Ladda synonymdata
-                const synonymResponse = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${synonymRange}?key=${apiKey}`);
+                const synonymResponse = await fetch(synonymUrl);
                 const synonymData = await synonymResponse.json();
                 primaryIngredients = {}; // Återställ mappningsobjektet för primära ingredienser
                 nonPrimarySynonyms = {}; // Återställ mappningsobjektet för icke-primära synonymer
@@ -612,12 +613,25 @@
                         nonPrimarySynonyms[ingredient] = synonyms;
                     }
                 });
-                console.log('Primary ingredients loaded:', primaryIngredients); // Detta loggar ut dina primära ingredienser
-                console.log('Non-primary synonyms loaded:', nonPrimarySynonyms); // Detta loggar ut dina icke-primära synonymer
+                console.log('Primary ingredients loaded:', primaryIngredients);
+                console.log('Non-primary synonyms loaded:', nonPrimarySynonyms);
+
+                // Ladda data för grupperade ingredienser
+                const groupedIngResponse = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/Ingredienser!A2:C?key=${apiKey}`);
+                const groupedIngData = await groupedIngResponse.json();
+                groupedIngredients = {};
+                groupedIngData.values.forEach(row => {
+                    const searchTerm = row[1]?.toLowerCase().trim();
+                    const ingredients = row[2]?.toLowerCase().split(',').map(ing => ing.trim());
+                    groupedIngredients[searchTerm] = ingredients;
+                });
+                console.log('Grouped ingredients loaded:', groupedIngredients);
             } catch (error) {
                 console.error('Error fetching data:', error);
             }
         }
+
+
         async function loadSynonyms() {
             try {
                 const synonymResponse = await fetch(synonymUrl);
@@ -676,12 +690,19 @@
                 console.log('Filtered data:', filteredData);
                 displayData(filteredData);
             } else {
-                // Behåller din ursprungliga funktionalitet för att söka efter ingredienser
-                let searchIngredients = selectedTags.map(tag => ingredientSynonyms[tag] || tag);
+                // För varje vald tagg, hitta matchande ingredienser eller grupperade ingredienser
+                let searchIngredients = selectedTags.flatMap(tag => {
+                    if (groupedIngredients[tag]) {
+                        return groupedIngredients[tag];
+                    } else {
+                        return ingredientSynonyms[tag] || tag;
+                    }
+                });
                 console.log('Ingredients to search for:', searchIngredients);
 
                 let filteredData = allData.filter(row => {
                     const ingredients = row[1]?.toLowerCase().split(', ').map(ing => ing.trim());
+                    // Kolla om ALLA valda taggar finns i ingredienslistan
                     return searchIngredients.every(ingredient => ingredients.includes(ingredient));
                 });
 
@@ -697,6 +718,7 @@
                 displayData(filteredData);
             }
         }
+
 
 
 
